--- a/res/layout/activity_practice_planner.xml
+++ b/res/layout/activity_practice_planner.xml
@@ -3,9 +3,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#FFFFFF"
+        android:orientation="horizontal"
+        android:layout_marginTop="50dp" >
+
+        <EditText
+            android:id="@+id/practiceTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/practice_title_hint" 
+            android:textColor="#000000"
+            android:textColorHint="#000000"
+            android:textSize="30sp"/>
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:background="#FFFFFF" >
 
@@ -13,44 +31,23 @@
             android:id="@+id/tableLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="#F87431"
             android:scrollbars="vertical" >
 
             <TableRow
                 android:id="@+id/tableRow2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp" >
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/practice_title"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="#000000" />
+                android:layout_marginTop="10dp"
+                android:background="#FFFFFF" >
+                
             </TableRow>
-
-            <!--
-        <TableRow
-            android:id="@+id/tableRow4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <Button
-                android:id="@+id/addDrillButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="addDrill"
-                android:text="@string/add_drill" />
-        </TableRow>
-            -->
-
+            
             <TableRow
                 android:id="@+id/tableRow1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp" >
+                android:background="#FFFFFF" >
 
                 <TextView
                     android:id="@+id/timeText"
@@ -59,6 +56,7 @@
                     android:layout_weight="1"
                     android:text="@string/start_time_text"
                     android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold"
                     android:textColor="#000000" />
 
                 <TextView
@@ -69,6 +67,7 @@
                     android:layout_weight="1"
                     android:text="@string/drill"
                     android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold"
                     android:textColor="#000000" />
 
                 <TextView
@@ -79,56 +78,14 @@
                     android:layout_weight="1"
                     android:text="@string/duration_text"
                     android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold"
                     android:textColor="#000000" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/tableRow3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" >
-
-                <!-- Start Time -->
-
-                <EditText
-                    android:id="@+id/startTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="@string/start_time_hint"
-                    android:inputType="time"
-                    android:textColor="#000000" >
-
-                    <requestFocus />
-                </EditText>
-
-                <!-- Drill -->
-
-                <EditText
-                    android:id="@+id/drill"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="@string/drill_hint"
-                    android:textColor="#000000" />
-
-                <!-- Duration -->
-
-                <EditText
-                    android:id="@+id/duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="@string/duration_hint"
-                    android:inputType="time"
-                    android:textColor="#000000" />
+                android:layout_height="wrap_content" >
             </TableRow>
         </TableLayout>
     </ScrollView>
@@ -141,13 +98,13 @@
 
         <Button
             android:id="@+id/addDrillButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:onClick="addDrill"
-            android:text="@string/add_drill"
-            android:background="#F87431"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:layout_marginTop="10dp" />
+            android:background="#F87431"
+            android:onClick="addDrill"
+            android:text="@string/add_drill" />
     </LinearLayout>
 
 </LinearLayout>
