--- a/res/menu/stat_sheet.xml
+++ b/res/menu/stat_sheet.xml
@@ -5,5 +5,16 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_newSheet"
+        android:orderInCategory="200"
+        android:title="@string/new_statSheet"/>
+    <item
+        android:id="@+id/action_saveSheet"
+        android:icon="@drawable/content_save"
+        android:orderInCategory="300"
+        android:title="@string/save_statSheet"
+        android:showAsAction="ifRoom"/>
+        
 
 </menu>
