--- a/res/menu/practice_hub.xml
+++ b/res/menu/practice_hub.xml
@@ -5,9 +5,15 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+   <!-- <item
+        android:id="@+id/action_deletePractice"
+        android:orderInCategory="200"
+        android:title="@string/delete_practice"
+        android:icon="@drawable/content_discard"
+        android:showAsAction="ifRoom"/>-->
     <item
         android:id="@+id/action_hubNewPractice"
-        android:orderInCategory="200"
+        android:orderInCategory="300"
         android:title="@string/new_practice"
         android:icon="@drawable/content_new"
         android:showAsAction="ifRoom"/>
