--- a/res/menu/stat_sheet.xml
+++ b/res/menu/stat_sheet.xml
@@ -6,9 +6,11 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     <item
-        android:id="@+id/action_newSheet"
+        android:id="@+id/action_openStatSheet"
+        android:icon="@drawable/collections_collection"
         android:orderInCategory="200"
-        android:title="@string/new_statSheet"/>
+        android:title="@string/open_statSheet"
+        android:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_saveSheet"
         android:icon="@drawable/content_save"
