--- a/res/layout/activity_open_stat_sheet.xml
+++ b/res/layout/activity_open_stat_sheet.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +8,7 @@
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
     android:paddingTop="5dp"
-    tools:context=".PracticeHubActivity" >
+    tools:context=".OpenStatSheetActivity" >
 
     <TextView
         android:layout_width="match_parent"
@@ -28,4 +28,4 @@
         android:dividerHeight="5dip" >
     </ListView>
     
-</RelativeLayout>
+</LinearLayout>
