--- a/res/menu/open_stat_sheet.xml
+++ b/res/menu/open_stat_sheet.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_new_stat_sheet"
+        android:orderInCategory="200"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/content_new"
+        android:title="@string/new_stat_sheet"/>
 
 </menu>
