--- a/res/menu/stat_sheet.xml
+++ b/res/menu/stat_sheet.xml
@@ -5,16 +5,16 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-    <item
+    <!--<item
         android:id="@+id/action_openStatSheet"
         android:icon="@drawable/collections_collection"
         android:orderInCategory="200"
         android:title="@string/open_statSheet"
-        android:showAsAction="ifRoom"/>
+        android:showAsAction="ifRoom"/>-->
     <item
         android:id="@+id/action_saveSheet"
         android:icon="@drawable/content_save"
-        android:orderInCategory="300"
+        android:orderInCategory="200"
         android:title="@string/save_statSheet"
         android:showAsAction="ifRoom"/>
 </menu>
