--- a/res/menu/stat_sheet.xml
+++ b/res/menu/stat_sheet.xml
@@ -5,12 +5,12 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-    <!--<item
-        android:id="@+id/action_openStatSheet"
-        android:icon="@drawable/collections_collection"
+    <item
+        android:id="@+id/action_deleteStatSheet"
+        android:icon="@drawable/content_discard"
         android:orderInCategory="200"
         android:title="@string/open_statSheet"
-        android:showAsAction="ifRoom"/>-->
+        android:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_saveSheet"
         android:icon="@drawable/content_save"
