--- a/res/layout/stat_sheet_list_item.xml
+++ b/res/layout/stat_sheet_list_item.xml
@@ -28,5 +28,17 @@
             android:textSize="40sp" />
     </RelativeLayout>
     
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/listStatSheetTeamName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+    </RelativeLayout>
+    
 
 </LinearLayout>
