--- a/res/layout/stat_sheet_list_item.xml
+++ b/res/layout/stat_sheet_list_item.xml
@@ -31,11 +31,20 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
+        
+        <TextView 
+            android:id="@+id/teamNameHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/team_name"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/listStatSheetTeamName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/teamNameHeader"
             android:textColor="#000000"
             android:textSize="20sp" />
     </RelativeLayout>
