Created a StatsSummaryActivity which is the interface that the user will use to get a summary of stats on a specific player. Also added a StatisticsCruncher class which will calculate the requested data.

--- a/res/menu/open_stat_sheet.xml
+++ b/res/menu/open_stat_sheet.xml
@@ -11,5 +11,8 @@
         android:showAsAction="ifRoom"
         android:icon="@drawable/content_new"
         android:title="@string/new_stat_sheet"/>
+    <item android:id="@+id/action_stats_cruncher"
+        android:orderInCategory="300"
+        android:title="@string/stats_summary_header"/>
 
 </menu>
