--- a/res/layout/activity_stats_summary.xml
+++ b/res/layout/activity_stats_summary.xml
@@ -52,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:onClick="displayStats"
             android:text="@string/stats_summary_button_label" />
     </LinearLayout>
 
